Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/AActor.h

	DOTNET_EXPORT auto E_AActor_HasAuthority(AActor* Self)
	{
		return Self->HasAuthority();
	}
	DOTNET_EXPORT auto E_AActor_HasDeferredComponentRegistration(AActor* Self)
	{
		return Self->HasDeferredComponentRegistration();
	}
	DOTNET_EXPORT auto E_AActor_HasNetOwner(AActor* Self)
	{
		return ((E_PROTECTED_WRAP_AActor*)Self)->HasNetOwner_WRAP();
	}
	DOTNET_EXPORT auto E_AActor_HasValidRootComponent(AActor* Self)
	{
		return Self->HasValidRootComponent();
	}
	DOTNET_EXPORT auto E_AActor_IncrementalRegisterComponents(AActor* Self, int32 NumComponentsToRegister)
	{
		auto _p0 = NumComponentsToRegister;
		return Self->IncrementalRegisterComponents(_p0);
	}
	DOTNET_EXPORT auto E_AActor_InitializeComponents(AActor* Self)
	{
		Self->InitializeComponents();
	}
	DOTNET_EXPORT auto E_AActor_InvalidateLightingCache(AActor* Self)
	{
		Self->InvalidateLightingCache();
	}
	DOTNET_EXPORT auto E_AActor_InvalidateLightingCacheDetailed(AActor* Self, bool bTranslationOnly)
	{
		auto _p0 = bTranslationOnly;
		Self->InvalidateLightingCacheDetailed(_p0);
	}
	DOTNET_EXPORT auto E_AActor_IsActorBeginningPlay(AActor* Self)
	{
		return Self->IsActorBeginningPlay();
	}
	DOTNET_EXPORT auto E_AActor_IsActorBeingDestroyed(AActor* Self)
	{
		return Self->IsActorBeingDestroyed();
	}
	DOTNET_EXPORT auto E_AActor_IsActorInitialized(AActor* Self)
	{
		return Self->IsActorInitialized();
	}
	DOTNET_EXPORT auto E_AActor_IsActorTickEnabled(AActor* Self)
	{
		return Self->IsActorTickEnabled();
	}
	DOTNET_EXPORT auto E_AActor_IsChildActor(AActor* Self)
	{
		return Self->IsChildActor();
	}
	DOTNET_EXPORT auto E_AActor_IsInPersistentLevel(AActor* Self, bool bIncludeLevelStreamingPersistent)
	{
		auto _p0 = bIncludeLevelStreamingPersistent;
		return Self->IsInPersistentLevel(_p0);
	}
	DOTNET_EXPORT auto E_AActor_IsLevelBoundsRelevant(AActor* Self)
	{
		return Self->IsLevelBoundsRelevant();
	}
	DOTNET_EXPORT auto E_AActor_IsMatineeControlled(AActor* Self)
	{
		return Self->IsMatineeControlled();
	}
	DOTNET_EXPORT auto E_AActor_IsNetMode(AActor* Self, ENetMode Mode)
	{
		auto _p0 = Mode;
		return Self->IsNetMode(_p0);
	}
	DOTNET_EXPORT auto E_AActor_IsNetStartupActor(AActor* Self)
	{
		return Self->IsNetStartupActor();
	}
	DOTNET_EXPORT auto E_AActor_IsPendingKillPending(AActor* Self)
	{
		return Self->IsPendingKillPending();
	}
	DOTNET_EXPORT auto E_AActor_IsRootComponentCollisionRegistered(AActor* Self)
	{
		return Self->IsRootComponentCollisionRegistered();
	}
	DOTNET_EXPORT auto E_AActor_IsRootComponentMovable(AActor* Self)
	{
		return Self->IsRootComponentMovable();
	}
	DOTNET_EXPORT auto E_AActor_IsRootComponentStatic(AActor* Self)
	{
		return Self->IsRootComponentStatic();
	}
	DOTNET_EXPORT auto E_AActor_IsRootComponentStationary(AActor* Self)
	{
		return Self->IsRootComponentStationary();
	}
	DOTNET_EXPORT auto E_AActor_K2_DestroyActor(AActor* Self)
	{
		Self->K2_DestroyActor();
	}
	DOTNET_EXPORT auto E_AActor_K2_DetachFromActor(AActor* Self, EDetachmentRule LocationRule, EDetachmentRule RotationRule, EDetachmentRule ScaleRule)
	{
		auto _p0 = LocationRule;
		auto _p1 = RotationRule;
		auto _p2 = ScaleRule;
		Self->K2_DetachFromActor(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_AActor_K2_GetActorLocation(AActor* Self)
	{
		return (INT_PTR) new FVector(Self->K2_GetActorLocation());
	}
	DOTNET_EXPORT auto E_AActor_K2_GetActorRotation(AActor* Self)
	{
		return (INT_PTR) new FRotator(Self->K2_GetActorRotation());
	}
	DOTNET_EXPORT auto E_AActor_K2_OnReset(AActor* Self)
	{
		Self->K2_OnReset();
	}
	DOTNET_EXPORT auto E_AActor_K2_SetActorRotation(AActor* Self, INT_PTR NewRotation, bool bTeleportPhysics)
	{
		auto _p0 = *(FRotator*)NewRotation;
		auto _p1 = bTeleportPhysics;
		return Self->K2_SetActorRotation(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AActor_K2_TeleportTo(AActor* Self, INT_PTR DestLocation, INT_PTR DestRotation)
	{
		auto _p0 = *(FVector*)DestLocation;
		auto _p1 = *(FRotator*)DestRotation;
		return Self->K2_TeleportTo(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AActor_LifeSpanExpired(AActor* Self)
	{
		Self->LifeSpanExpired();
	}
	DOTNET_EXPORT auto E_AActor_MarkComponentsAsPendingKill(AActor* Self)
	{
		Self->MarkComponentsAsPendingKill();
	}
	DOTNET_EXPORT auto E_AActor_MarkComponentsRenderStateDirty(AActor* Self)
	{
		Self->MarkComponentsRenderStateDirty();
	}
	DOTNET_EXPORT auto E_AActor_NotifyActorBeginCursorOver(AActor* Self)
	{
		Self->NotifyActorBeginCursorOver();
	}
	DOTNET_EXPORT auto E_AActor_NotifyActorEndCursorOver(AActor* Self)
	{
		Self->NotifyActorEndCursorOver();
	}
	DOTNET_EXPORT auto E_AActor_OnRep_AttachmentReplication(AActor* Self)
	{
		Self->OnRep_AttachmentReplication();
	}
	DOTNET_EXPORT auto E_AActor_OnRep_Instigator(AActor* Self)
	{
		Self->OnRep_Instigator();
	}
	DOTNET_EXPORT auto E_AActor_OnRep_Owner(AActor* Self)
	{
		((E_PROTECTED_WRAP_AActor*)Self)->OnRep_Owner_WRAP();
	}
	DOTNET_EXPORT auto E_AActor_OnRep_ReplicatedMovement(AActor* Self)
	{
		Self->OnRep_ReplicatedMovement();
	}
	DOTNET_EXPORT auto E_AActor_OnRep_ReplicateMovement(AActor* Self)
	{
		Self->OnRep_ReplicateMovement();
	}
	DOTNET_EXPORT auto E_AActor_OnReplicationPausedChanged(AActor* Self, bool bIsReplicationPaused)
	{
		auto _p0 = bIsReplicationPaused;
		Self->OnReplicationPausedChanged(_p0);
	}
	DOTNET_EXPORT auto E_AActor_OutsideWorldBounds(AActor* Self)
	{
		Self->OutsideWorldBounds();
	}
	DOTNET_EXPORT auto E_AActor_PostActorCreated(AActor* Self)
	{
		Self->PostActorCreated();
	}
	DOTNET_EXPORT auto E_AActor_PostInitializeComponents(AActor* Self)
	{
		Self->PostInitializeComponents();
	}
	DOTNET_EXPORT auto E_AActor_PostNetInit(AActor* Self)
	{
		Self->PostNetInit();
	}
	DOTNET_EXPORT auto E_AActor_PostNetReceiveLocation(AActor* Self)
	{
		Self->PostNetReceiveLocation();
	}
	DOTNET_EXPORT auto E_AActor_PostNetReceiveLocationAndRotation(AActor* Self)
	{
		Self->PostNetReceiveLocationAndRotation();
	}
	DOTNET_EXPORT auto E_AActor_PostNetReceivePhysicState(AActor* Self)
	{
		Self->PostNetReceivePhysicState();
	}
	DOTNET_EXPORT auto E_AActor_PostRegisterAllComponents(AActor* Self)
	{
		Self->PostRegisterAllComponents();
	}
	DOTNET_EXPORT auto E_AActor_PostUnregisterAllComponents(AActor* Self)
	{
		Self->PostUnregisterAllComponents();
	}
	DOTNET_EXPORT auto E_AActor_PreInitializeComponents(AActor* Self)
	{
		Self->PreInitializeComponents();
	}
	DOTNET_EXPORT auto E_AActor_PrestreamTextures(AActor* Self, float Seconds, bool bEnableStreaming, int32 CinematicTextureGroups)
	{
		auto _p0 = Seconds;
		auto _p1 = bEnableStreaming;
		auto _p2 = CinematicTextureGroups;
		Self->PrestreamTextures(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_AActor_ProcessUserConstructionScript(AActor* Self)
	{
		((E_PROTECTED_WRAP_AActor*)Self)->ProcessUserConstructionScript_WRAP();
	}
	DOTNET_EXPORT auto E_AActor_ReceiveActorBeginCursorOver(AActor* Self)
	{
		Self->ReceiveActorBeginCursorOver();
	}
	DOTNET_EXPORT auto E_AActor_ReceiveActorEndCursorOver(AActor* Self)
	{
		Self->ReceiveActorEndCursorOver();
	}
	DOTNET_EXPORT auto E_AActor_ReceiveBeginPlay(AActor* Self)
	{
		((E_PROTECTED_WRAP_AActor*)Self)->ReceiveBeginPlay_WRAP();
	}
	DOTNET_EXPORT auto E_AActor_ReceiveDestroyed(AActor* Self)
	{
		Self->ReceiveDestroyed();
	}
	DOTNET_EXPORT auto E_AActor_ReceiveTick(AActor* Self, float DeltaSeconds)
	{
		auto _p0 = DeltaSeconds;
		Self->ReceiveTick(_p0);
	}
	DOTNET_EXPORT auto E_AActor_RegisterActorTickFunctions(AActor* Self, bool bRegister)
	{
		auto _p0 = bRegister;
		((E_PROTECTED_WRAP_AActor*)Self)->RegisterActorTickFunctions_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_AActor_RegisterAllActorTickFunctions(AActor* Self, bool bRegister, bool bDoComponents)
	{
		auto _p0 = bRegister;
		auto _p1 = bDoComponents;
		Self->RegisterAllActorTickFunctions(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AActor_RegisterAllComponents(AActor* Self)
	{
		Self->RegisterAllComponents();
	}
	DOTNET_EXPORT auto E_AActor_ReregisterAllComponents(AActor* Self)
	{
		Self->ReregisterAllComponents();
	}
	DOTNET_EXPORT auto E_AActor_RerunConstructionScripts(AActor* Self)
	{
		Self->RerunConstructionScripts();
	}
	DOTNET_EXPORT auto E_AActor_Reset(AActor* Self)
	{
		Self->Reset();
	}
	DOTNET_EXPORT auto E_AActor_ResetOwnedComponents(AActor* Self)
	{
		Self->ResetOwnedComponents();
	}
	DOTNET_EXPORT auto E_AActor_ResetPropertiesForConstruction(AActor* Self)
	{
		Self->ResetPropertiesForConstruction();
	}
	DOTNET_EXPORT auto E_AActor_SetActorEnableCollision(AActor* Self, bool bNewActorEnableCollision)
	{
		auto _p0 = bNewActorEnableCollision;
		Self->SetActorEnableCollision(_p0);
	}